ci: select environments

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,11 +2,14 @@ name: Deploy
 
 on:
   workflow_dispatch:
+    inputs:
+      environment:
+        type: environment
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     environment:
-      name: dev
+      name: ${{ github.event.inputs.environment }}
     steps:
       - run: echo `${{ secrets.MY_SECRET }} ${{ vars.MY_VARIABLE }} !`
